objects/MedProSC__MedPro_TestCustomObject1__c.object
<CustomObject>
    <description>A transient custom object used by the MedPro Search Connector&apos;s suite of Apex Test Classes</description>
    <fields>
        <fullName>MedProSC__MedProID__c</fullName>
        <label>MedProID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedProMasterID__c</fullName>
        <externalId>true</externalId>
        <label>MedProMasterID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedPro_Updated_TS__c</fullName>
        <label>MedPro Updated TS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MedProSC__NPI_Number__c</fullName>
        <label>NPI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Test_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MedPro_TestCustomObject1</relationshipLabel>
        <relationshipName>MedPro_TestCustomObject1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameM1D1__c</fullName>
        <label>fieldNameM1D1</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameM1D2__c</fullName>
        <label>fieldNameM1D2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameM1D3__c</fullName>
        <label>fieldNameM1D3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameZ1D1__c</fullName>
        <label>fieldNameZ1D1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameZ1D2__c</fullName>
        <label>fieldNameZ1D2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameZ1D3__c</fullName>
        <label>fieldNameZ1D3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>MedPro_TestCustomObject1</label>
    <listViews>
        <fullName>MedProSC__All</fullName>
        <columns>NAME</columns>
        <columns>MedProSC__fieldNameM1D4__c</columns>
        <columns>MedProSC__fieldNameM1D5__c</columns>
        <columns>MedProSC__NPI_Number__c</columns>
        <columns>MedProSC__MedProID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MedPro_TestCustomObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedPro_TestCustomObject1</pluralLabel>
    <recordTypes>
        <fullName>MedProSC__MedProTestCO1_RT1</fullName>
        <active>true</active>
        <label>MedProTestCO1_RT1</label>
    </recordTypes>
    <recordTypes>
        <fullName>MedProSC__MedProTestCO1_RT2</fullName>
        <active>true</active>
        <label>MedProTestCO1_RT2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>